@@ -106,31 +106,41 @@ int main (int argc, char **argv)
 
   ipv6.SetBase (Ipv6Address ("2001:1::"), Ipv6Prefix (64));
   Ipv6InterfaceContainer i1 = ipv6.Assign (d1);
-  i1.SetRouter (1, true);
+  i1.SetForwarding (1, true);
+  i1.SetDefaultRouteInAllNodes (1);
 
   ipv6.SetBase (Ipv6Address ("2001:2::"), Ipv6Prefix (64));
   Ipv6InterfaceContainer i2 = ipv6.Assign (d2);
-  i2.SetRouter (1, true);
+  i2.SetForwarding (1, true);
+  i2.SetDefaultRouteInAllNodes (1);
 
   ipv6.SetBase (Ipv6Address ("2001:3::"), Ipv6Prefix (64));
   Ipv6InterfaceContainer i3 = ipv6.Assign (d3);
-  i3.SetRouter (0, true);
-  i3.SetRouter (1, true);
+  i3.SetForwarding (0, true);
+  i3.SetDefaultRouteInAllNodes (0);
+  i3.SetForwarding (1, true);
+  i3.SetDefaultRouteInAllNodes (1);
 
   ipv6.SetBase (Ipv6Address ("2001:4::"), Ipv6Prefix (64));
   Ipv6InterfaceContainer i4 = ipv6.Assign (d4);
-  i4.SetRouter (0, true);
-  i4.SetRouter (1, true);
+  i4.SetForwarding (0, true);
+  i4.SetDefaultRouteInAllNodes (0);
+  i4.SetForwarding (1, true);
+  i4.SetDefaultRouteInAllNodes (1);
 
   ipv6.SetBase (Ipv6Address ("2001:5::"), Ipv6Prefix (64));
   Ipv6InterfaceContainer i5 = ipv6.Assign (d5);
-  i5.SetRouter (0, true);
-  i5.SetRouter (1, true);
+  i5.SetForwarding (0, true);
+  i5.SetDefaultRouteInAllNodes (0);
+  i5.SetForwarding (1, true);
+  i5.SetDefaultRouteInAllNodes (1);
 
   ipv6.SetBase (Ipv6Address ("2001:6::"), Ipv6Prefix (64));
   Ipv6InterfaceContainer i6 = ipv6.Assign (d6);
-  i6.SetRouter (0, true);
-  i6.SetRouter (1, true);
+  i6.SetForwarding (0, true);
+  i6.SetDefaultRouteInAllNodes (0);
+  i6.SetForwarding (1, true);
+  i6.SetDefaultRouteInAllNodes (1);
 
   NS_LOG_INFO ("Create Applications.");
 
